[package]
name = "turnip-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
sqlparser = "0.32.0"
thiserror = "1.0.40"


[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "repl"
path = "src/repl.rs"